kubernetes/admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: admin-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: admin
    template:
        metadata:
            labels:
                component: admin
        spec:
            containers:
                -   name: admin
                    image: 89253556478/web_app_demo:admin
                    ports:
                        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
    name: admin-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: admin
    ports:
     -   port: 8081
         targetPort: 8081
