kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend-deployment
    labels:
        component: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            component: backend
    template:
        metadata:
            labels:
                component: backend
        spec:
            containers:
                -   name: backend
                    image: 89253556478/web_app_demo:backend
                    ports:
                    - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ExternalName
  externalName: localhost
  selector:
    component: backend
  ports:
    - port: 5000
      targetPort: 5000
